# tcm-swarm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build-docs.sh  foo.cpp  main.cpp  plot-energies.gnu  stack.yaml  tcm-swarm.cabal
app/: Main.hs
cbits/: RBM.hpp  accumulators.hpp  covariance.hpp  force.hpp  heisenberg.cpp  heisenberg.hpp  logging.cpp  logging.hpp  mcmc_config.hpp  mcmc_config.ipp  mcmc_state.hpp  mcmc_state.ipp  memory.hpp  metropolis_local.cpp  metropolis_local.hpp  momenta.hpp  monte_carlo.cpp  monte_carlo.hpp  neural.cpp  neural.h  nqs.cpp  nqs.h  nqs_types.h  parse_test.hpp  random.cpp  random.hpp  rbm_spin.hpp  rbm_spin_float.cpp  rbm_spin_float.hpp  rbm_spin_float.ipp  spin.hpp  spin_state.cpp  spin_state.hpp  spin_utils.hpp
cbits/detail/: axpby.hpp  axpy.hpp  compact_index.hpp  config.hpp  copy.hpp  debug.hpp  dotu.hpp  errors.hpp  gemv.hpp  geru.hpp  her.hpp  herk.hpp  lncosh.hpp  mkl.hpp  mkl_allocator.hpp  random.hpp  scale.hpp  simd.hpp  tanh.hpp  use_different_spin.hpp
cbits/test/: CMakeLists.txt  axpy.cpp  force.cpp  lncosh.cpp  metropolis_local.cpp  monte_carlo.cpp  parser.cpp  parser.hpp  rbm_spin.cpp
cbits/test/input/: force_6_6_0.out  force_6_6_1.out  force_6_6_10.out  force_6_6_11.out  force_6_6_12.out  force_6_6_13.out  force_6_6_14.out  force_6_6_15.out  force_6_6_16.out  force_6_6_17.out  force_6_6_18.out  force_6_6_19.out  force_6_6_2.out  force_6_6_3.out  force_6_6_4.out  force_6_6_5.out  force_6_6_6.out  force_6_6_7.out  force_6_6_8.out  force_6_6_9.out  gradient_6_24_0.out  gradient_6_24_1.out  gradient_6_24_10.out  gradient_6_24_11.out  gradient_6_24_12.out  gradient_6_24_13.out  gradient_6_24_14.out  gradient_6_24_15.out  gradient_6_24_16.out  gradient_6_24_17.out  gradient_6_24_18.out  gradient_6_24_19.out  gradient_6_24_2.out  gradient_6_24_3.out  gradient_6_24_4.out  gradient_6_24_5.out  gradient_6_24_6.out  gradient_6_24_7.out  gradient_6_24_8.out  gradient_6_24_9.out  (+141 more)
cbits/test/standalone/: CMakeLists.txt  error.cpp  errors.cpp  force.cpp  heisenberg.cpp  metropolis_local.cpp  random.cpp  rbm_spin.cpp  simd.cpp  spin.cpp
cmake/: FindMKL.cmake  FindSVML.cmake  FindVc.cmake
example/hh1d/: hh1dopen.hs
example/mcmc/: Main.hs
example/sr/: Main.hs
src/: Heisenberg.hs  Swarm.hs
src/NQS/: CG.hs  Rbm.hs  SR.hs
src/NQS/Internal/: BLAS.hs  FFI.hs  Hamiltonian.chs  LAPACK.chs  Rbm.chs  Sampling.chs  Types.hs
src/NQS/Rbm/: Mutable.hs
src/PSO/: Energy.hs  FromPython.hs  Heisenberg.hs  Neural.hs  Random.hs  Swarm.hs  VectorSpace.hs
src/PSO/Internal/: Neural.chs  Types.hs
test/: CMakeLists.txt
test/PSO/: NeuralSpec.hs
tools/: plot-common.gnu
