name:                tcm-swarm
version:             0.1.0.0
synopsis:            Particle Swarm Optimisation related code
-- description:
homepage:            https://github.com/twesterhout/tcm-swarm#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          kot.tom97@gmail.com
copyright:           (c) 2017-2018 Tom Westerhout
category:            Unclassified
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:   ./src
  exposed-modules:   NQS.Rbm
                   , NQS.Rbm.Mutable
                   , NQS.Internal.Types
                   , NQS.Internal.FFI
                   , NQS.Internal.Rbm
                   , NQS.Internal.Hamiltonian
                   , NQS.Internal.Sampling
                   , NQS.Internal.BLAS
                   , NQS.Internal.LAPACK
                   , NQS.CG
                   , NQS.SR
--   exposed-modules:   PSO.Internal.Neural
--                    , PSO.Neural
                   , PSO.Random
                   , PSO.Swarm
                   , PSO.VectorSpace
--                    , PSO.Heisenberg
--                    , PSO.Energy
                   , PSO.FromPython
  build-depends:       base >= 4.7 && < 5
                     , primitive
                     , bytestring
                     -- , bytestring-lexing
                     , singletons
                     , constraints
                     , deepseq
                     , attoparsec
                     , text
                     , vector
                     , semigroups
                     , mtl
                     , microlens
                     , microlens-th
                     , hblas
                     , storable-complex
                     , mersenne-random
                     , mwc-random
                     -- , hmatrix
                     -- , NumInstances
                     , storable-tuple
                     -- , pipes
                     -- , folds
                     , derive-storable
                     , aeson
                     , fast-logger
  build-tools: c2hs
  extra-libraries: nqs_c, nqs_cxx, mkl_intel_lp64, mkl_gnu_thread, mkl_core, gomp, pthread
  ghc-options: -O2 -fprof-auto
  include-dirs: external/intel/mkl/include
              , cbits
  extra-lib-dirs: /home/tom/src/tcm-swarm/external/intel/mkl/lib/intel64
                , /home/tom/src/tcm-swarm/build
  default-language:    Haskell2010

executable mcmc-test 
  hs-source-dirs:      example/mcmc
  main-is:             Main.hs 
  ghc-options:         -O2 -rtsopts -fprof-auto
  build-depends:       base
                     , attoparsec
                     , tcm-swarm
                     , text
                     -- , lens
                     , mtl
                     -- , hmatrix
                     , mersenne-random
                     , mwc-random
                     , primitive
                     , vector
                     , microlens
                     -- , bytestring
                     -- , NumInstances
                     -- , statistics
                     -- , pipes
                     -- , folds
  extra-libraries: nqs_c, nqs_cxx, mkl_intel_lp64, mkl_gnu_thread, mkl_core, gomp, pthread
  include-dirs: /home/tom/src/tcm-swarm/external/intel/mkl/include
              , cbits
  extra-lib-dirs: /home/tom/src/tcm-swarm/external/intel/mkl/lib/intel64
                , /home/tom/src/tcm-swarm/build
  default-language:    Haskell2010

executable sr-test 
  hs-source-dirs:      example/sr
  main-is:             Main.hs 
  ghc-options:         -O2 -rtsopts -fprof-auto
  build-depends:       base
                     , attoparsec
                     , tcm-swarm
                     , text
                     -- , lens
                     , mtl
                     -- , hmatrix
                     , mersenne-random
                     , mwc-random
                     , primitive
                     , vector
                     , microlens
                     , aeson
                     , fast-logger
                     -- , bytestring
                     -- , NumInstances
                     -- , statistics
                     -- , pipes
                     -- , folds
  extra-libraries: nqs_c, nqs_cxx, mkl_intel_lp64, mkl_gnu_thread, mkl_core, gomp, pthread
  -- intel_lp64, mkl_gnu_thread, mkl_core, gomp, pthread
  include-dirs: /home/tom/src/tcm-swarm/external/intel/mkl/include
              , cbits
  extra-lib-dirs: /home/tom/src/tcm-swarm/external/intel/mkl/lib/intel64
                , /home/tom/src/tcm-swarm/build
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/twesterhout/tcm-swarm
